Added pre release version for handlebars net helper

--- a/HandleBarsDotNet8.DynamicLinq.WebAPI/HandleBarsDotNet8.DynamicLinq.WebAPI.csproj
+++ b/HandleBarsDotNet8.DynamicLinq.WebAPI/HandleBarsDotNet8.DynamicLinq.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Handlebars.Net" Version="2.1.6" />
-    <PackageReference Include="Handlebars.Net.Helpers" Version="2.4.3" />
-    <PackageReference Include="Handlebars.Net.Helpers.Core" Version="2.4.3" />
-    <PackageReference Include="Handlebars.Net.Helpers.DynamicLinq" Version="2.4.3" />
-    <PackageReference Include="Handlebars.Net.Helpers.Json" Version="2.4.3" />
+    <PackageReference Include="Handlebars.Net.Helpers" Version="2.4.3-ci-18706" />
+    <PackageReference Include="Handlebars.Net.Helpers.Core" Version="2.4.3-ci-18706" />
+    <PackageReference Include="Handlebars.Net.Helpers.DynamicLinq" Version="2.4.3-ci-18706" />
+    <PackageReference Include="Handlebars.Net.Helpers.Json" Version="2.4.3-ci-18706" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
